wk_taa_taaqa/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Software_Owner__c</fullName>
        <formula>IF( Account.Software_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.Software_Owner__r.Custodial_Rep__r.FirstName + &quot; &quot; + Account.Software_Owner__r.Custodial_Rep__r.LastName,
    Account.Software_Owner__r.FirstName &amp; &quot; &quot; &amp; Account.Software_Owner__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <description>Used for Small Market Lead Share</description>
        <inlineHelpText>Used for Small Market Lead Share</inlineHelpText>
        <label>Submitted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAA_18_digit_Contact_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAA 18-digit Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAA_Account_Record_ID__c</fullName>
        <description>AccountID in TAA Org</description>
        <formula>CASESAFEID(AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAA Account Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing_of_STG_implementation__c</fullName>
        <label>Timing of STG implementation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within next 12 months</fullName>
                </value>
                <value>
                    <fullName>Between 13 to 24 months</fullName>
                </value>
                <value>
                    <fullName>Greater than 24 months</fullName>
                </value>
                <value>
                    <fullName>No plans at this time/Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TwoTrial_Campaign_ID__c</fullName>
        <description>Captures the TAA record ID for the Campaign matching the TwoTrial Campaign Name</description>
        <inlineHelpText>Captures the TAA record ID for the Campaign matching the TwoTrial Campaign Name</inlineHelpText>
        <label>TwoTrial Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwoTrial_Campaign_Name__c</fullName>
        <description>Captures the name of the Campaign from SFS</description>
        <inlineHelpText>Captures the name of the Campaign from SFS for TWOTrial</inlineHelpText>
        <label>TwoTrial Campaign Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WK_ContactID__c</fullName>
        <externalId>true</externalId>
        <label>WK Contact ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WK_LEGACY_SUBSCRIBERKEY__c</fullName>
        <label>WK_LEGACY_SUBSCRIBERKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2013_User_Conference_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2013 User Conference Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_User_Conference_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 User Conference Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Case_for_nomination__c</fullName>
        <inlineHelpText>•	Late-stage opportunities (Execute Demo, minimum) worth $25,000 in first year revenue.  
•	A “New to New” prospect designated in SFDC with no current Wolters Kluwer Tax &amp; Accounting U.S. Software or R&amp;L solutions (books, excluded)</inlineHelpText>
        <label>Case for nomination</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2015_User_Conference_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 User Conference Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_User_Conference_Nominee_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 User Conference Nominee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_User_Conference_Nominee_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This program is designed for those prospective new clients who are in the late stages of the sales process and need that final “push” or due diligence to make their decision to become a new client.</inlineHelpText>
        <label>2016 User Conference Nominee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2017_UC_Nominee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2017 UC Nominee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2017_User_Conference_Nominee_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This program is designed for those prospective new clients who are in the late stages of the sales process and need that final “push” or due diligence to make their decision to become a new client.</inlineHelpText>
        <label>2017 User Conference Nominee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_Managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_does_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
        <description>Backend calculation field used for reporting</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ATX_2016_Lost_Renewal_Reengagement</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>ATX 2016 Lost Renewal Reengagement</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inside_Sales_Managment</group>
            <group>Small_Firm_New_Sales_GW_Team</group>
            <group>Small_Firm_Sales_Managers</group>
            <role>Sales_Consultant_Small_Firm_New_Sales_GE</role>
            <role>Sales_Consultant_Small_Firm_New_Sales_GW</role>
            <role>Sales_Consultant_Small_Firm_New_Sales_JA</role>
            <role>Sales_Consultant_Small_Firm_New_Sales_LF_2</role>
            <role>Sales_Consultant_Small_Firm_New_Sales_RR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Channel_Partner_Tradeshow2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>Channel Partner Tradeshow</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FCC_499_Registers2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>FCC 499 Registers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SureTax_com_Downloads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>SureTax.com Downloads</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW_2016_Lost_Renewal_Reengagement</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>TW 2016 Lost Renewal Reengagement</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inside_Sales_Managment</group>
            <group>Small_Firm_New_Sales_GW_Team</group>
            <group>Small_Firm_Sales_Managers</group>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_GE</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_GW</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_JA</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_LF_2</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_RR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Topics_View_Template</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>ENTER TOPIC NAME</value>
        </filters>
        <label>Topics View Template</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ultratax_Thomson_Competitive_Takeaway</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>Ultratax/Thomson Competitive Takeaway</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_GE</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_GW</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_JA</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_LF_2</roleAndSubordinates>
            <roleAndSubordinates>Sales_Consultant_Small_Firm_New_Sales_RR</roleAndSubordinates>
            <roleAndSubordinates>Sales_Manager_Small_Firm_New_Sales_GW</roleAndSubordinates>
            <roleAndSubordinates>Sales_Manager_Small_Firm_New_Sales_JA</roleAndSubordinates>
            <roleAndSubordinates>Sales_Manager_Small_Firm_New_Sales_RR</roleAndSubordinates>
            <roleAndSubordinates>Sales_Manager_Small_Firm_Sales_LF</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Vertex_Attack_Plan_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>Vertex Attack Plan - Customers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DSM_Corporate_Direct</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Vertex_Attack_Plan_Prospects</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>Vertex Attack Plan - Prospects</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DSM_Corporate_Direct</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2013_User_Conference_Attendees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2013_User_Conference_Attendee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2013 User Conference Attendees</label>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
            <roleAndSubordinates>VP_Nat_l_Strategic_Accounts</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_R_L_Sales</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_Software_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2014_User_Conference_Attendees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2014_User_Conference_Attendee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2014 User Conference Attendees</label>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
            <roleAndSubordinates>VP_Nat_l_Strategic_Accounts</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_R_L_Sales</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_Software_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2015_User_Conference_Attendees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2015_User_Conference_Attendee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2015 User Conference Attendees</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
            <roleAndSubordinates>VP_Nat_l_Strategic_Accounts</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_R_L_Sales</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_Software_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_User_Conference_Attendees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2016_User_Conference_Attendee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2016 User Conference Attendees</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
            <roleAndSubordinates>VP_Nat_l_Strategic_Accounts</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_R_L_Sales</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_Software_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_User_Conference_Attendees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2017_User_Conference_Attendee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2017 User Conference Attendees</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Director_Corporate_Software</roleAndSubordinates>
            <roleAndSubordinates>VP_Nat_l_Strategic_Accounts</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_R_L_Sales</roleAndSubordinates>
            <roleAndSubordinates>Vice_President_Software_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>jsImpacts__Block_autoupdate_from_Data_com</fullName>
        <active>true</active>
        <description>Record-level prevention of automated Clean jobs from automatically updating field values.</description>
        <errorConditionFormula>(  jsImpacts__Data_com_does_not_auto_update__c  ) &amp;&amp; ($User.Alias = &quot;autocln&quot;) &amp;&amp; (ISCHANGED(  Title  ) || ISCHANGED(  Email  ) || ISCHANGED(  Phone  ) || ISCHANGED(  MailingStreet  ) || ISCHANGED(  MailingCity  ) || ISCHANGED(  MailingState  ) || ISCHANGED(  MailingCountry  ) || ISCHANGED(  MailingPostalCode  ) )</errorConditionFormula>
        <errorMessage>This record has been excluded from automated field updates from Data.com Clean jobs.</errorMessage>
    </validationRules>
</CustomObject>